Render a maximum of 6 files by default to avoid DOM overflow

--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,12 @@ input, button, fieldset, textarea {
 .module h2:first-child {
 	margin-top: 0;
 }
+.file.unstaged {
+	order: 1;
+}
+.file.staged {
+	order: 2;
+}
 .unstagedTitle,
 .file.unstaged > label {
 	background-color: rgba(255, 0, 0, 0.3);
